5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1638_2449.log
== TEST (2019-04-11 10:25:15) 
-- CODE:
a = int(input("Coeficiente a:"))
b = int(input("coeficiente b:"))
c = int(input("Coeficiente c:"))
d = int(input("Coeficiente d:"))
e = int(input("Coeficiente e:"))
f = int(input("Coeficiente f:"))

if ((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
	eq = ((c*e)-(b*f))/(a*e)-(b*d)
	eq2 =((a*f)-(c*d))/(a*e)-(b*d)
	
print(eq)
print(eq2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:26:43) 
-- CODE:
a = int(input("Coeficiente a:"))
b = int(input("coeficiente b:"))
c = int(input("Coeficiente c:"))
d = int(input("Coeficiente d:"))
e = int(input("Coeficiente e:"))
f = int(input("Coeficiente f:"))
eq = ((c*e)-(b*f))/(a*e)-(b*d)
eq2 =((a*f)-(c*d))/(a*e)-(b*d)

if ((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
	g = eq
	g2 = eq2
print(g)
print(g2)
-- EXECUTION TIME:
0.167348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:28:15) 
-- CODE:
a = int(input("Coeficiente a:"))
b = int(input("coeficiente b:"))
c = int(input("Coeficiente c:"))
d = int(input("Coeficiente d:"))
e = int(input("Coeficiente e:"))
f = int(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = eq
	g2 = eq2
print(g)
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '10.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:02) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = eq
	g2 = eq2
print(g)
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(g)
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:44) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.211948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 15, in <module>
    print(g)
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:46) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.146994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 15, in <module>
    print(g)
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:47) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.259931
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-126.9090909090909
-135.36363636363637
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Coeficiente a:coeficiente b:Coeficiente c:Coeficiente d:Coeficiente e:Coeficiente f:Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:47) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.282154
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-126.9090909090909
-135.36363636363637
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Coeficiente a:coeficiente b:Coeficiente c:Coeficiente d:Coeficiente e:Coeficiente f:-5373.958333333333
-5391.104166666667
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:47) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.484921
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Coeficiente a:coeficiente b:Coeficiente c:Coeficiente d:Coeficiente e:Coeficiente f:-5373.958333333333
-5391.104166666667
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Coeficiente a:coeficiente b:Coeficiente c:Coeficiente d:Coeficiente e:Coeficiente f:-5373.958333333333
-5391.104166666667
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:54) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(g)
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:31:17) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.164147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 15, in <module>
    print(g)
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:45) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/(a*e)-(b*d)
y =((a*f)-(c*d))/(a*e)-(b*d)
l = ((a*e)-b*d)
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(g)
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:01) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:35:30) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
print(g)
print(g2)
-- EXECUTION TIME:
0.150907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:14) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
	print(g)
	print(g2)
-- EXECUTION TIME:
0.182099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:17) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
	print(g)
	print(g2)
-- EXECUTION TIME:
0.151106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:18) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
	print(g)
	print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:38:30) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y =((a*f)-(c*d))/((a*e)-(b*d))
l = ((a*e)-(b*d))
if (l == 0):
	print("Nao tem solucao")
else:
	g = x
	g2 = y
	print(g)
	print(g2)
-- EXECUTION TIME:
0.173077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:48:15) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))
x1= ((a*e)-(b*d))
y =((a*f)-(c*d))
y1 = ((a*e)-(b*d))

if (x1 == 0)
	(y2 ==0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.164561
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:48:23) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = ((c*e)-(b*f))
x1= ((a*e)-(b*d))
y =((a*f)-(c*d))
y1 = ((a*e)-(b*d))

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.147117
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:48:43) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y =(a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.190154
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:06) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.189147
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:07) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.166978
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:08) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.193229
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:08) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.216883
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:08) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.443775
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:08) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.653505
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:08) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.507052
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:10) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y2 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- ERROR:
File "XXXX", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:28) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.199385
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:29) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1= (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- ERROR:
File "XXXX", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:42) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1 = (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- EXECUTION TIME:
0.178249
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:42) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1 = (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0)
	(y1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- ERROR:
File "XXXX", line 12
    if (x1 == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:42) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1 = (a*e)-(b*d)
y = (a*f)-(c*d)
y1 = (a*e)-(b*d)

if (x1 == 0) 
	(y1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/y2)
-- ERROR:
File "XXXX", line 12
    if (x1 == 0) 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:43) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1 = (a*e)-(b*d)
y = (a*f)-(c*d)


if (x1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/x1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:53) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))
x = (c*e)-(b*f)
x1 = (a*e)-(b*d)
y = (a*f)-(c*d)


if (x1 == 0):
	print("Nao tem solucao")
else:
	print(x/x1)
	print(y/x1)
-- EXECUTION TIME:
0.136238
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
